--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -60,12 +60,11 @@ img {
 
 .meminfo__plus{
     width: 10%;
+    line-height: 3em;
     display: none;
 }
 .meminfo__minus{
     width: 10%;
-    top: 50%;
-    left: 50%;
     display: none;
 }
 .meminfo__input {
@@ -79,12 +78,20 @@ img {
     transition: max-height 0.5s;
 }
 
-@media (min-height: 568px) and (min-width: 320px) {
-    
-}
-
-@media (min-height: 1180px) and (min-width: 820px) {
-    
+@media (max-height: 1180px) and (max-width: 820px) {
+    body{
+        background-repeat: no-repeat;
+    }
+    .accordion label{
+        color: rgb(0, 4, 255);
+    }
+    .accordion .meminfo__minus{
+        color: rgb(0, 4, 255);
+    }
+    .accordion .meminfo__plus{
+        color: rgb(0, 4, 255);
+        display: block;
+    }
 }
 
 @media (min-height: 1080px) and (min-width: 1920px) {
@@ -97,6 +104,5 @@ img {
     .accordion:hover .meminfo__plus{
         color: rgb(0, 4, 255);
         display: block;
-        
     }
 }
